// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview|Query.projects connection fetches the public and private projects with a cursor 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": null,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlNZQ==",
          "title": "projectOrgaVisibilityMe",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": null,
          "id": "UHJvamVjdDpyYXBwb3J0RXZhbHVhdGlvbg==",
          "title": "Rapport d'évaluation 6 (AR6)",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "contributions": Object {
            "totalCount": 310,
          },
          "contributionsCount": 310,
          "contributors": Object {
            "totalCount": 3,
          },
          "cover": null,
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "title": "Budget Participatif IdF 3",
          "votes": Object {
            "totalCount": 6,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": Object {
            "url": "https://capco.test/media/default/0001/01/providerReference58.jpg",
          },
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "title": "Food project",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": Object {
            "url": "https://capco.test/media/default/0001/01/archived.jpeg",
          },
          "id": "UHJvamVjdDpwcm9qZWN0QXJjaGl2ZWQ=",
          "title": "Projet Archivé",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjc=",
      "hasNextPage": true,
    },
    "totalCount": 47,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects containing a specific term 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "contributions": Object {
            "totalCount": 264,
          },
          "contributionsCount": 234,
          "id": "UHJvamVjdDpwcm9qZWN0MQ==",
          "publishedAt": "2014-12-31 00:00:00",
          "title": "Croissance, innovation, disruption",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "hasNextPage": false,
    },
    "totalCount": 1,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects ordered by latest 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "contributions": Object {
            "totalCount": 74,
          },
          "contributionsCount": 74,
          "id": "UHJvamVjdDpwcm9qZWN0MjU=",
          "publishedAt": "2014-12-07 00:00:00",
          "title": "Projet avec beaucoup d'opinions",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "id": "UHJvamVjdDpleHRlcm5hbFByb2plY3RXaXRob3V0Q291bnRlcg==",
          "publishedAt": "2014-12-09 00:00:00",
          "title": "Projet externe sans compteur",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "contributions": Object {
            "totalCount": 51,
          },
          "contributionsCount": 51,
          "id": "UHJvamVjdDpleHRlcm5hbFByb2plY3Q=",
          "publishedAt": "2014-12-10 00:00:00",
          "title": "Projet externe",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "contributions": Object {
            "totalCount": 2,
          },
          "contributionsCount": 2,
          "id": "UHJvamVjdDpwcm9qZWN0MjE=",
          "publishedAt": "2014-12-11 00:00:00",
          "title": "Questions/Responses",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "id": "UHJvamVjdDpwcm9qZWN0MTY=",
          "publishedAt": "2014-12-16 00:00:00",
          "title": "Le P16 un projet à base de riz",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "hasNextPage": true,
    },
    "totalCount": 41,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a cursor 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "contributions": Object {
            "totalCount": 2,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 2,
          },
          "cover": null,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlBZG1pbkFuZE1l",
          "title": "Budget Participatif d'organisation",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": null,
          "id": "UHJvamVjdDpyYXBwb3J0RXZhbHVhdGlvbg==",
          "title": "Rapport d'évaluation 6 (AR6)",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "contributions": Object {
            "totalCount": 310,
          },
          "contributionsCount": 310,
          "contributors": Object {
            "totalCount": 3,
          },
          "cover": null,
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "title": "Budget Participatif IdF 3",
          "votes": Object {
            "totalCount": 6,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": Object {
            "url": "https://capco.test/media/default/0001/01/providerReference58.jpg",
          },
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "title": "Food project",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "contributions": Object {
            "totalCount": 0,
          },
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "cover": Object {
            "url": "https://capco.test/media/default/0001/01/archived.jpeg",
          },
          "id": "UHJvamVjdDpwcm9qZWN0QXJjaGl2ZWQ=",
          "title": "Projet Archivé",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjY=",
      "hasNextPage": true,
    },
    "totalCount": 41,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a specific author 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "node": Object {
          "authors": Array [
            Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
          ],
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
        },
      },
      Object {
        "node": Object {
          "authors": Array [
            Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
          ],
          "id": "UHJvamVjdDpwcm9qZWN0Q2FmZXRpZXI=",
        },
      },
      Object {
        "node": Object {
          "authors": Array [
            Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
          ],
          "id": "UHJvamVjdDpwcm9qZWN0Q2FubmFiaXM=",
        },
      },
      Object {
        "node": Object {
          "authors": Array [
            Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
          ],
          "id": "UHJvamVjdDpwcm9qZWN0Q29yb25h",
        },
      },
      Object {
        "node": Object {
          "authors": Array [
            Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
          ],
          "id": "UHJvamVjdDpwcm9qZWN0SWRm",
        },
      },
    ],
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a specific district 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "node": Object {
          "districts": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Qz",
                  "name": "Centre ville",
                },
              },
              Object {
                "node": Object {
                  "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Q0",
                  "name": "Îles de Nantes",
                },
              },
              Object {
                "node": Object {
                  "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Q1",
                  "name": "Hauts pavés Saint-Félix",
                },
              },
              Object {
                "node": Object {
                  "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Q2",
                  "name": "Malakoff Saint-Donation",
                },
              },
              Object {
                "node": Object {
                  "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Q3",
                  "name": "Dervallières Zola",
                },
              },
            ],
            "totalCount": 5,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Mg==",
        },
      },
    ],
    "totalCount": 1,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a specific theme 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0MjY=",
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0MQ==",
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0Mg==",
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0NQ==",
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme3",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0MTM=",
          "themes": Array [
            Object {
              "id": "theme1",
            },
          ],
        },
      },
    ],
    "totalCount": 7,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a specific type 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0MQ==",
          "type": Object {
            "id": "3",
          },
        },
      },
      Object {
        "node": Object {
          "id": "UHJvamVjdDpwcm9qZWN0Mw==",
          "type": Object {
            "id": "3",
          },
        },
      },
    ],
    "totalCount": 2,
  },
}
`;
